<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:theme="@style/AppThemeSecond"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/color_white"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title_cadastro_empresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="CADASTRO DA EMPRESA"
        android:textColor="@color/edittext_color"
        android:textSize="15sp"
        android:gravity="center"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:minLines="1"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/et_cadastrar_nome_empresa"
        app:layout_constraintTop_toBottomOf="@id/tv_title_cadastro_empresa"
        android:layout_marginTop="30dp"
        android:hint="@string/nome_da_empresa"
        android:textColorHint="@color/edittext_color"
        
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:minLines="1"
        android:id="@+id/et_endereco_empresa"
        android:layout_marginLeft="10dp"
        app:layout_goneMarginLeft="10dp"
        app:layout_constraintTop_toBottomOf="@id/et_cadastrar_nome_empresa"
        android:layout_marginTop="50dp"
        android:hint="@string/endere_o_da_empresa"
        android:textColorHint="@color/edittext_color"
        
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:maxLines="1"
        android:minLines="1"
        android:inputType="number"
        android:layout_marginRight="10dp"
        android:id="@+id/et_telefone_empresa"
        app:layout_constraintTop_toBottomOf="@id/et_endereco_empresa"
        android:layout_marginTop="50dp"
        android:hint="@string/telefone_da_empresa"
        android:textColorHint="@color/edittext_color"
        
        />

    <Button
        android:id="@+id/btn_cadastrar_dados_empresa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintTop_toBottomOf="@id/et_telefone_empresa"
        android:background="@drawable/shape_cuttom_escolha"
        android:layout_marginTop="50dp"
        android:text="@string/cadastrar_empresa"
        android:textColor="@color/edittext_color"/>
</androidx.constraintlayout.widget.ConstraintLayout>