<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    tools:context=".ui.CadastrarProdutoAtivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="INSIRA OS DADOS "
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textColor="@color/edittext_color"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:textSize="15sp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_cadastro_nome_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome_do_produto"
        android:textColorHint="@color/edittext_color"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin_bordas"
        android:layout_marginRight="@dimen/margin_bordas"
        android:layout_marginTop="150dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_cadastro_valor_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/valor_do_produto"
        android:textColorHint="@color/edittext_color"
        app:layout_constraintTop_toBottomOf="@id/et_cadastro_nome_produto"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin_bordas"
        android:layout_marginRight="@dimen/margin_bordas"
        android:layout_marginTop="50dp"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_cadastro_qtd_produto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/quantidade_do_produto"
        android:textColorHint="@color/edittext_color"
        app:layout_constraintTop_toBottomOf="@id/et_cadastro_valor_produto"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="@dimen/margin_bordas"
        android:layout_marginRight="@dimen/margin_bordas"
        android:layout_marginTop="50dp"/>

    <Button
        android:id="@+id/btn_cadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/et_cadastro_qtd_produto"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_cutton_escolha"
        android:layout_marginRight="@dimen/margin_bordas"
        android:layout_marginLeft="@dimen/margin_bordas"
        android:text="@string/cadastrar_produto"
        android:textColor="@color/edittext_color"/>

</androidx.constraintlayout.widget.ConstraintLayout>