<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_icon_email"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/ic_supermarket"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape_round"
        android:hint="@string/digite_seu_login"
        android:lines="1"
        android:maxLines="1"
        android:minLines="1"
        android:padding="12dp"
        android:textColor="@color/color_white"
        android:textColorHint="@color/color_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_icon_email" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_senha"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/shape_round"
        android:hint="@string/digite_sua_senha"
        android:inputType="number"
        android:padding="12dp"
        android:textColor="@color/color_white"
        android:textColorHint="@color/color_white"
        app:layout_constraintLeft_toLeftOf="@id/et_login"
        app:layout_constraintRight_toRightOf="@id/et_login"
        app:layout_constraintTop_toBottomOf="@id/et_login" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_enter"
        android:layout_width="0dp"

        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginVertical="50dp"
        android:background="@drawable/shape_gradient_button"
        android:text="@string/entrar"
        android:textAllCaps="false"
        android:textColor="#fff"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_senha" />

</androidx.constraintlayout.widget.ConstraintLayout>